--- a/components/grid-wallet-demo/src/components/ConfigurePanel/ConfigurePanel.module.scss
+++ b/components/grid-wallet-demo/src/components/ConfigurePanel/ConfigurePanel.module.scss
@@ -23,7 +23,7 @@
 .content {
   display: flex;
   flex-direction: column;
-  gap: 34px;
+  gap: var(--spacing-md);
   width: 100%;
 }
 
